--- a/simpl.css
+++ b/simpl.css
@@ -14,6 +14,9 @@ body {
   margin: 0;
   font: 13px sans-serif;
 }
+pre, code, kbd, samp, tt, .CodeMirror {
+  font-family: Consolas, monospace;
+}
 html, body, #code, .CodeMirror {
   height: 100%;
 }
@@ -38,6 +41,7 @@ h2 {
   padding: 2px 0 2px 10px;
   font-size: 11px;
   font-weight: normal;
+  line-height: 12px;
   text-transform: uppercase;
   letter-spacing: 1px;
   background: #333;
@@ -135,10 +139,10 @@ nav button, #actions button {
 nav button:before, #actions button:before {
   font: 26px entypo;
   position: absolute;
+  top: 0;
   left: 0;
-  margin-top: -.75em;
   width: 100%;
-  height: 0;
+  line-height: 13px;
   text-align: center;
 }
 nav button:hover, #actions button:hover {
@@ -341,7 +345,6 @@ nav .selected button {
 }
 #actions button:before {
   width: 30px;
-  margin-top: -.5em;
 }
 .search {
   position: relative;
@@ -469,8 +472,7 @@ nav .selected button {
 }
 #history table {
   width: 100%;
-  font-family: monospace;
-  line-height: 1.2em;
+  font-family: Consolas, monospace;
   white-space: pre-wrap;
   border-collapse: collapse;
   border-spacing: 0;
